--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Buscador de películas</h1>
     <input type="text" id="searchInput" placeholder="Ingrese el título de la película">
     <button id="searchButton">Buscar</button>
+    <button id="refreshButton">Refrescar Página</button>
     <div id="results"></div>
   </div>
 
